src/pages/style.css
:root {
    --font-one: 'Bebas Neue';
    --font-two: 'Kanit';
    --font-three: 'Lisu Bosa';
    --font-four: 'Gruppo';
    --thru-black: rgba(35, 58, 73, 0.9);
    --border-color: rgb(176, 175, 175);
}

html,
body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
}

body {
    background-image: url(../../blue-oil-canvas-dark.png);
    background-size: cover;
    background-repeat: repeat;
    background-attachment: fixed;
    background-position: center center;
    color: white;
    font-family: var(--font-two);
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
}

h2 {
    font-family: var(--font-one);
    font-size: 80px;
    text-align: center;
    margin: 0;
    margin-top: 50px;
    margin-bottom: 15px;
}

#my-name {
    margin-bottom: 0;
}

h3 {
    font-family: var(--font-two);
    text-align: center;
    margin-top: 0;
    margin-bottom: 50px;
    font-size: 35px;
}

p {
    text-indent: 40px;
    max-width: 800px;
    font-size: 18px;
}

ul {
    display: flex;
    justify-content: space-around;
    list-style: none;
    padding: 0;
}

li {
    padding-left: 7px;
    padding-right: 7px;
    border-radius: 10px;
}

a {
    text-decoration: none;
    color: white;
    border-radius: 5px;
    padding-left: 10px;
    padding-right: 10px;
    transition: box-shadow .5s, background-color .5s;
}

.link {
    transition: all .3s ease-in-out;
}

.link:hover {
    background-color: rgb(133, 159, 168, .5);
}

.gray-container {
    background-color: var(--thru-black);
    border: var(--border-color) 1px solid;
    border-radius: 20px;
}

.gray-text-container {
    background-color: rgba(35, 58, 73, 0.5);
    border: var(--border-color) 1px solid;
    border-radius: 20px;
    padding: 20px;
}

.nav {
    width: 400px;
    position: fixed;
    margin-bottom: 30px;
    top: 20px;
    backdrop-filter: blur(2px);
    z-index: 100;
}

.contact-form {
    padding: 15px;
}

#contact-p {
    width: 90vw;
    max-width: 500px;
}

.home-content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.layout-container {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.content-wrap {
    display: flex;
    justify-content: center;
    flex: 1;
    position: relative;
}

.page {
    margin: 50px;
}

.page-content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.p-container {
    margin-top: 50px;
}

.proj-paragraph {
    margin-top: 20px;
    margin-bottom: 20px;
}

#headshot-circle {
    width: 200px;
    height: 200px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px var(--border-color) solid;
    border-radius: 50%;
    overflow: hidden;
    position: relative;
}

#headshot {
    width: 350px;
    position: absolute;
    top: 0px;
}

form {
    display: flex;
    flex-direction: column;
    width: 90vw;
    max-width: 500px;
}

.form-field {
    margin-bottom: 10px;
    height: 30px;
    padding-left: 7px;
    border-color: var(--border-color);
    border-radius: 8px;
    font-family: var(--font-two);
    font-size: 18px;
}

#message {
    height: 100px;
    resize: vertical;
    padding: 8px;
    padding-left: 9px;
}

#submit {
    background-color: rgb(113, 140, 149);
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

#submit:hover {
    background-color: rgb(86, 110, 119);
}

.project-image {
    height: 420px;
    width: 100%;
    max-width: 90vw;
    object-fit: cover;
    object-position: top;
    border-radius: 10px;
    border: var(--border-color) 1px solid;
    box-sizing: border-box;
}

.project-links {
    width: 280px;
    max-width: 100vw;
    height: 30px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.project-name {
    margin-bottom: 10px;
}

h2,
h3 {
    text-shadow:
        -1px -1px 0 black,
        1px -1px 0 black,
        -1px 1px 0 black,
        1px 1px 0 black;
}

#proj-one,
#proj-two {
    margin-top: 0px;
}

.project {
    margin-top: 100px;
    flex: 0 0 48%;
    max-width: 100vw;
}

.projects-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 20px;
    max-width: 1440px;
}

footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 60px;
    background-color: var(--thru-black);
    border-top: var(--border-color) 2px solid;
    padding: 20px;
}

.footer-icon {
    width: 40px;
    padding: 5px;
    filter:invert(100%);
    box-sizing: border-box;
    transition: all .2s ease-in-out; 
}

.footer-icon:hover {
    transform: scale(1.1);
}

.popup {
    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
    position: fixed;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
    background-color: green;
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
    z-index: 1000;
    visibility: hidden;
    opacity: 0;
}

.fade-in {
    visibility: visible;
    opacity: 1;
}

.fade-out {
    visibility: hidden;
    opacity: 0;
}

.icon {
    width: 70px;
    margin-left:15px;
    margin-right:15px;
    padding: 10px;
    background-color: white;
    border: black 1px solid;
}

.icons {
    display: flex;
    justify-content: center;
}

.icons-container {
    display:flex;
    justify-content: center;
    padding-top: 15px;
    padding-bottom: 15px;
    margin-bottom: 10px;
}

#python-icon {
    padding-bottom: 1px;
    padding-right: 7px;
}

@media (min-width:1023px) {
    .project-image {
        height: 300px;
    }
}

@media (min-width:1440px) {
    .project-image {
        height: 400px;
    }
}

@media (max-width:1023px) {
    .projects-container {
        display: block;
    }
    #proj-two {
        margin-top: 100px;
    }
}

@media (max-width:768px) {
    a:hover {
        background-color: none;
    }

    a:active {
        background-color: none;
    }

    body {
        background-size: auto;
    }
}

@media (max-width:540px) {
    .nav {
        position: fixed;
        top: 10px;
    }

    h2 {
        margin-top: 40px;
    }
    .project-image {
        max-height: 270px;
    }
}

@media (max-width:410px) {
    .nav {
        max-width: 95vw;
    }

    h2 {
        font-size: 60px;
    }
    .project-image {
        max-width: 100vw;
    }
    p {
        width: 85vw;
    }
    a {
        padding: 0;
    }
}

@media (max-width:280px) {
    .nav {
        max-width: 100vw;
    }
    h3 {
        font-size: 20px;
    }
}

